# hack_parallel

./: .gitignore  META  Makefile  README.md  dune  dune-project  hack_parallel.opam  install.txt  parallel.install  parallel.ml  parallel.mli
.github/workflows/: build.yaml
src/heap/: .merlin  dune  hh_shared.c  sharedMem.ml  sharedMem.mli
src/injection/default_injector/: .merlin  dune
src/interface/: dune  hack_parallel_intf.ml  hack_parallel_intf.mli  memory.ml  memory.mli  parallel_intf.ml  parallel_intf.mli  scheduler.ml  scheduler.mli
src/procs/: .merlin  .worker.ml.swp  dune  hack_bucket.ml  hack_bucket.mli  multiWorker.ml  multiWorker.mli  worker.ml  worker.mli
src/socket/: .merlin  dune  socket.ml
src/stubs/: .merlin  dune  eventLogger.ml
src/utils/: .merlin  daemon.ml  daemon.mli  dune  fork.ml  get_build_id.c  hh_logger.ml  marshal_tools.ml  measure.ml  measure.mli  sys_utils.ml  sysinfo.c  timeout.ml  utils.ml
src/utils/collections/: .merlin  dune
src/utils/disk/: .merlin  dune
src/utils/hh_json/: .merlin  dune  hh_json.ml  hh_json.mli
