opam-version: "1.2"
maintainer: "rvantonder@gmail.com"
authors: [""]
homepage: "https://github.com/rvantonder/hack-parallel"
bug-reports: "https://github.com/rvantonder/hack-parallel/issues"
dev-repo: "https://github.com/rvantonder/hack-parallel.git"
license: "MIT"
build: [["dune" "build" "-p" name "-j" jobs "@install"]]
depends: [
  "core"
]
