opam-version: "2.0"
maintainer: "rvantonder@gmail.com"
authors: "Facebook hackers"
homepage: "https://github.com/rvantonder/hack-parallel"
bug-reports: "https://github.com/rvantonder/hack-parallel/issues"
dev-repo: "git+https://github.com/rvantonder/hack-parallel.git"
license: "MIT"
build: ["dune" "build" "-p" name "-j" jobs "@install"]
depends: [
  "core"
  "ppx_deriving"
]
synopsis: "Parallel and shared memory library"
description: """
Parallel and shared memory components used in Facebook's Hack, Flow, and Pyre
projects.
"""
