opam-version: "2.0"
maintainer: "Rijnard van Tonder <rvantonder@gmail.com>"
authors: "Facebook. Modifications by Rijnard van Tonder"
homepage: "https://github.com/rvantonder/hack-parallel"
bug-reports: "https://github.com/rvantonder/hack-parallel/issues"
dev-repo: "git+https://github.com/rvantonder/hack-parallel.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
depends: [
  "conf-sqlite3"
  "core"
  "ocaml" {>= "4.03.0"}
  "ppx_deriving"
  "ppxlib"
  "sexplib"
]
depexts: [
  "pkg-config"
  "sqlite3"
]
synopsis: "Parallel and shared memory library"
description: """
Parallel and shared memory components used in Facebook's Hack, Flow, and Pyre
projects.
"""
# url {
#   src: "https://github.com/rvantonder/hack-parallel/archive/1.0.0.tar.gz"
#   checksum: "md5=d5ef2ddb9c566fe1d632041be5fa5c40"
# }
