(library
 (name interface)
 (public_name hack_parallel.interface)
 (modules hack_parallel_intf)
 (wrapped false)
 (libraries
  core
  hack_parallel.heap
  hack_parallel.processes
  hack_parallel.utilities))

(library
 (name scheduler)
 (public_name hack_parallel.scheduler)
 (modules scheduler)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv))
 (libraries
  core
  sexplib
  ppxlib
  hack_parallel.interface
  hack_parallel.memory))

(library
 (name memory)
 (public_name hack_parallel.memory)
 (modules memory)
 (preprocess
  (pps
   ppx_deriving.eq
   ppx_deriving.show
   ppx_hash
   ppx_compare
   ppx_sexp_conv))
 (libraries
  core
  sexplib
  ppxlib
  hack_parallel.interface))
